# receipt-auditor-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/routes/: policy.py  upload.py
app/core/: rag.py
app/db/: database.py
app/models/: report.py
app/schemas/: schema.py
app/services/: ai_service.py  policy_service.py  report_service.py  storage_service.py  upload_service.py
