[project]
name = "receipt-auditor-ai"
version = "0.1.0"
description = "AI financial auditing system"
authors = [
    {name = "Abdullateef Alao",email = "aabdullateef557@gmail.com"}
]
package-mode = false          
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.47.0,<0.48.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "openai (>=2.38.0,<3.0.0)",
    "groq (>=1.2.0,<2.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "pgvector (>=0.4.2,<0.5.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pdfplumber (>=0.11.9,<0.12.0)",
    "pymupdf (>=1.27.2.3,<2.0.0.0)",
    "python-multipart (>=0.0.29,<0.0.30)",
    "chromadb (>=1.5.9,<2.0.0)",
    "sqlmodel (>=0.0.38,<0.0.39)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "boto3 (>=1.43.14,<2.0.0)",
    "reportlab (>=4.5.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
